@@ -93,22 +93,6 @@ name|apache
 operator|.
 name|hadoop
 operator|.
-name|hbase
-operator|.
-name|io
-operator|.
-name|HbaseObjectWritable
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
 name|io
 operator|.
 name|ObjectWritable
@@ -360,6 +344,16 @@ argument_list|)
 throw|;
 block|}
 block|}
+specifier|private
+specifier|static
+specifier|final
+name|HBaseConfiguration
+name|hbc
+init|=
+operator|new
+name|HBaseConfiguration
+argument_list|()
+decl_stmt|;
 specifier|public
 name|void
 name|readFields
@@ -387,13 +381,13 @@ operator|=
 operator|(
 name|WritableByteArrayComparable
 operator|)
-name|HbaseObjectWritable
+name|ObjectWritable
 operator|.
 name|readObject
 argument_list|(
 name|in
 argument_list|,
-literal|null
+name|hbc
 argument_list|)
 expr_stmt|;
 block|}
@@ -429,7 +423,7 @@ name|WritableByteArrayComparable
 operator|.
 name|class
 argument_list|,
-literal|null
+name|hbc
 argument_list|)
 expr_stmt|;
 block|}
