@@ -107,6 +107,72 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|filter
+operator|.
+name|Filter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|filter
+operator|.
+name|QualifierFilter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|filter
+operator|.
+name|RegexStringComparator
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|filter
+operator|.
+name|CompareFilter
+operator|.
+name|CompareOp
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|util
 operator|.
 name|Bytes
@@ -304,6 +370,313 @@ name|println
 argument_list|(
 literal|"Done."
 argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testFilters
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|byte
+index|[]
+name|TABLE
+init|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"testFilters"
+argument_list|)
+decl_stmt|;
+name|HTable
+name|ht
+init|=
+name|createTable
+argument_list|(
+name|TABLE
+argument_list|,
+name|FAMILY
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+index|[]
+name|ROWS
+init|=
+name|makeN
+argument_list|(
+name|ROW
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|byte
+index|[]
+index|[]
+name|QUALIFIERS
+init|=
+block|{
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col0-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col1-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col2-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col3-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col4-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col5-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col6-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col7-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col8-<d2v1>-<d3v2>"
+argument_list|)
+block|,
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+literal|"col9-<d2v1>-<d3v2>"
+argument_list|)
+block|}
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Put
+name|put
+init|=
+operator|new
+name|Put
+argument_list|(
+name|ROWS
+index|[
+name|i
+index|]
+argument_list|)
+decl_stmt|;
+name|put
+operator|.
+name|add
+argument_list|(
+name|FAMILY
+argument_list|,
+name|QUALIFIERS
+index|[
+name|i
+index|]
+argument_list|,
+name|VALUE
+argument_list|)
+expr_stmt|;
+name|ht
+operator|.
+name|put
+argument_list|(
+name|put
+argument_list|)
+expr_stmt|;
+block|}
+name|Scan
+name|scan
+init|=
+operator|new
+name|Scan
+argument_list|()
+decl_stmt|;
+name|scan
+operator|.
+name|addFamily
+argument_list|(
+name|FAMILY
+argument_list|)
+expr_stmt|;
+name|Filter
+name|filter
+init|=
+operator|new
+name|QualifierFilter
+argument_list|(
+name|CompareOp
+operator|.
+name|EQUAL
+argument_list|,
+operator|new
+name|RegexStringComparator
+argument_list|(
+literal|"col[1-5]"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|scan
+operator|.
+name|setFilter
+argument_list|(
+name|filter
+argument_list|)
+expr_stmt|;
+name|ResultScanner
+name|scanner
+init|=
+name|ht
+operator|.
+name|getScanner
+argument_list|(
+name|scan
+argument_list|)
+decl_stmt|;
+name|int
+name|expectedIndex
+init|=
+literal|1
+decl_stmt|;
+for|for
+control|(
+name|Result
+name|result
+range|:
+name|ht
+operator|.
+name|getScanner
+argument_list|(
+name|scan
+argument_list|)
+control|)
+block|{
+name|assertEquals
+argument_list|(
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|Bytes
+operator|.
+name|equals
+argument_list|(
+name|result
+operator|.
+name|raw
+argument_list|()
+index|[
+literal|0
+index|]
+operator|.
+name|getRow
+argument_list|()
+argument_list|,
+name|ROWS
+index|[
+name|expectedIndex
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|Bytes
+operator|.
+name|equals
+argument_list|(
+name|result
+operator|.
+name|raw
+argument_list|()
+index|[
+literal|0
+index|]
+operator|.
+name|getQualifier
+argument_list|()
+argument_list|,
+name|QUALIFIERS
+index|[
+name|expectedIndex
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|expectedIndex
+operator|++
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+name|expectedIndex
+argument_list|,
+literal|6
+argument_list|)
+expr_stmt|;
+name|scanner
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * Test simple table and non-existent row cases.    */
